# WestHillsCapital

./: .gitattributes  .gitleaks.toml  .replit  README.md  knip.json  nixpacks.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  railway.pdf-worker.toml  railway.toml  railway.worker.toml  replit.md  tsconfig.json  vercel.json
.agents/: agent_assets_metadata.toml
.github/: dependabot.yml
attached_assets/: Pasted--10-Pipeline-Race-Fix-Sheets-Consolidation-What-Why-Two_1776202017322.txt  Pasted--2026-04-16T21-01-52-430831317Z-info-request-completed-_1776373653121.txt  Pasted--message-Sheets-syncDealOpsStatus-failed-non-fatal-seve_1776359990755.txt  Pasted-1-Deal-Recap-Email-Template-Dynamic-Population-Required_1776266386478.txt  Pasted-1-Deal-Recap-Email-Template-Dynamic-Population-Required_1776273992248.txt  Pasted-1-Overview-West-Hills-Capital-WHC-we-us-or-our-is-commi_1776287217478.txt  Pasted-2026-04-08-18-20-39-990-UTC-31-LOG-checkpoint-starting-_1775673055340.txt  Pasted-5-Custodians-and-Depositories-IRA-Transactions-For-IRA-_1776287194894.txt  Pasted-Build-a-production-ready-website-for-West-Hills-Capital_1774298870782.txt  Pasted-Closed-Loop-IRA-Media-Logos-Banners-Images-Sample-Lead-_1776441991130.txt  Pasted-Fix-the-invoice-generator-so-the-invoice-output-matches_1776276802083.txt  (+29 more)
docs/: README.md  access-and-ownership.md  api-reference.md  (+23 more)
sdks/python/: README.md  pyproject.toml
sdks/python/docuplete/: __init__.py  _client.py  _errors.py  _packages.py  _sessions.py  _webhook.py  types.py
sdks/python/tests/: test_client.py  test_webhook.py
(+579 files in other folders)
